[gd_scene load_steps=3 format=3 uid="uid://btmvlrtubfcaj"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_h45kv"]
[ext_resource type="PackedScene" uid="uid://b5q7bsyfh4lq4" path="res://scenes/save_slot.tscn" id="2_mk3yl"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h45kv")

[node name="bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_view" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="vbox" type="VBoxContainer" parent="main_view"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="label" type="Label" parent="main_view/vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "Play with me v0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start" type="Button" parent="main_view/vbox"]
layout_mode = 2
text = "NEW_ADVENTURE_BTN"

[node name="load" type="Button" parent="main_view/vbox"]
layout_mode = 2
text = "LOAD_SAVE_BTN"

[node name="settings" type="Button" parent="main_view/vbox"]
layout_mode = 2
text = "SETTINGS_BTN"

[node name="exit" type="Button" parent="main_view/vbox"]
layout_mode = 2
text = "EXIT_BTN"

[node name="settings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="panel" type="PanelContainer" parent="settings"]
layout_mode = 2
size_flags_horizontal = 4

[node name="vbox" type="VBoxContainer" parent="settings/panel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="label" type="Label" parent="settings/panel/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "SETTINGS_LBL"
horizontal_alignment = 1

[node name="aimodel" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/panel/vbox/aimodel"]
layout_mode = 2
text = "AIMODEL_LBL"

[node name="option" type="OptionButton" parent="settings/panel/vbox/aimodel"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "gemini"
popup/item_1/text = "chatgpt"
popup/item_1/id = 1

[node name="aitoken" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/panel/vbox/aitoken"]
layout_mode = 2
text = "AITOKEN_LBL"

[node name="edit" type="LineEdit" parent="settings/panel/vbox/aitoken"]
layout_mode = 2
size_flags_horizontal = 3

[node name="aiendpoint" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2
alignment = 1

[node name="label" type="Label" parent="settings/panel/vbox/aiendpoint"]
layout_mode = 2
text = "AIENDPOINT_LBL"

[node name="edit" type="LineEdit" parent="settings/panel/vbox/aiendpoint"]
layout_mode = 2
size_flags_horizontal = 3

[node name="language" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="settings/panel/vbox/language"]
layout_mode = 2
text = "LANGUAGE_LBL"

[node name="option" type="OptionButton" parent="settings/panel/vbox/language"]
layout_mode = 2

[node name="theme" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2

[node name="label" type="Label" parent="settings/panel/vbox/theme"]
layout_mode = 2
text = "THEME_LBL"

[node name="option" type="OptionButton" parent="settings/panel/vbox/theme"]
layout_mode = 2

[node name="actions" type="HBoxContainer" parent="settings/panel/vbox"]
layout_mode = 2
alignment = 1

[node name="save" type="Button" parent="settings/panel/vbox/actions"]
layout_mode = 2
text = "SAVE_BTN"

[node name="cancel" type="Button" parent="settings/panel/vbox/actions"]
layout_mode = 2
text = "CANCEL_BTN"

[node name="load" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="margin" type="MarginContainer" parent="load"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="vbox" type="VBoxContainer" parent="load/margin"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="scroll" type="ScrollContainer" parent="load/margin/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="load/margin/vbox/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="save_1" parent="load/margin/vbox/scroll/vbox" instance=ExtResource("2_mk3yl")]
layout_mode = 2

[node name="actions" type="HBoxContainer" parent="load/margin/vbox"]
layout_mode = 2
alignment = 1

[node name="cancel" type="Button" parent="load/margin/vbox/actions"]
layout_mode = 2
text = "CANCEL_BTN"

[connection signal="pressed" from="main_view/vbox/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main_view/vbox/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="main_view/vbox/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main_view/vbox/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="settings/panel/vbox/actions/save" to="." method="_on_save_settings_pressed"]
[connection signal="pressed" from="settings/panel/vbox/actions/cancel" to="." method="_on_cancel_settings_pressed"]
[connection signal="pressed" from="load/margin/vbox/actions/cancel" to="." method="_on_cancel_load_pressed"]
